# bmoAssistant

./: .cache.sqlite  pyproject.toml
bmoassistant/: README.md  __init__.py
tests/: __init__.py
tests/funciones/: apiemt.py  bmopedia.py  emt.py  emtParadas.py  foto.py  polen.py  reproductor.py  sopabonita.py  temperatura.py
