[tool.poetry]
name = "bmoassistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
speechrecognition = "^3.10.4"
pyttsx3 = "^2.90"
playsound = "1.2.2"
pygame = "^2.5.2"
beautifulsoup4 = "^4.12.3"
openmeteo-requests = "^1.2.0"
requests-cache = "^1.2.0"
retry-requests = "^2.0.0"
retrying = "^1.3.4"
pandas = "^2.2.2"
openai = "^1.30.1"
pyaudio = "^0.2.14"
wikipedia = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
